--- a/styles/neonSign.scss
+++ b/styles/neonSign.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Advent+Pro:700);
+@import 'lightswitch';
 @-webkit-keyframes turnonlights {
     0%        { color: #6d5669; text-shadow: 0 0 3px #635861, 0 0 5px #635861; }
     1%        { color: #ff55de; text-shadow: 0 0 5px #ff99de, 0 0 10px #ff99de, 0 0 17px #ff00de, 0 0 38px #ff00de}
